<resources>
    <string name="app_name">Parchment</string>
    <string name="todo_title_hint">Enter a title for ToDo</string>
    <string name="todo_title_label">Title</string>
    <string name="todo_details_label">Details</string>
    <string name="todo_detail_hint">Enter details (Max 250 symbols)</string>
    <string name="todo_priority_label">Priority?</string>
    <string name="date_picker_title">Red time</string>
    <string name="new_todo">New Task</string>
    <string name="show_email">Show Email</string>
    <string name="hide_email">Hide Email</string>
    <string name="subtitle_format">%1$s tasks</string>
    <string name="delete_task">Delete</string>
    <string name="todo_list_fragment_text_view">Let\'s start your Parchment</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$s task</item>
        <item quantity="other">%1$s tasks</item>
    </plurals>
    <string name="dialog_delete_task">Delete task</string>
    <string name="message_dialog_fragment">Delete? Are you sure?</string>
    <string name="menu_todo_fragment_share">Share</string>
    <string name="todo_share_priority_yes">The task has priority</string>
    <string name="todo_share_priority_no">The task hasn\'t priority</string>
    <string name="todo_share">%1$s! The task must be finish to %2$s in %3$s on %4$s. %5$s</string>
    <string name="todo_share_title">ToDoshi. Share your task</string>
    <string name="send_todo">Send task via</string>
    <string name="detail_text_view_tablet_fragment_detail">Here will be your task detail</string>
    <string name="tab_name_tab_layout_inprogress">Actual</string>
    <string name="tab_name_tab_layout_finish">Completed</string>
    <string name="todo_fragment_hint_text_view">Here will be your completed tasks</string>
    <string name="todo_time_label">Deadline</string>
    <string name="pls_enter_deadline">Pls enter deadline</string>
    <string name="the_notication_date_not_introduced">The notification date not introduced</string>
    <string name="text_dialog_window_back_button">You can\'t create without title. Delete?</string>
    <string name="delete_message_delete_button">Are you wanna delete task?</string>
    <string name="save_changes_message">Save changes?</string>
    <string name="text_if_save_without_title">You can\'t save without title. Delete?</string>
    <string name="checkbox_text_label_notification">Notification?</string>
    <string name="empty">Empty</string>
    <string name="text_do_not_apply_changes">You can\'t save without title, do not apply changes?</string>
    <string name="done">Success?</string>
    <string name="any_comments">Any comments?</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="completed_to">Completed to</string>
    <string name="text_view_comment">Comment</string>
    <string name="enter_comment">Enter comment</string>
    <string name="no_date">No date</string>
    <string name="delete_all">Delete all?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="guest">Guest</string>
    <string name="auth_success">Authorization is successful</string>
    <string name="auth_failed">Authorization is unsuccessful</string>
    <string name="something_wrong_maybe_internet">Something wrong, maybe internet</string>
    <string name="one_of_the_field_empty">One of the fields empty</string>
    <string name="facebook_app_id">120073335327237</string>
    <string name="fb_login_protocol_scheme">fb120073335327237</string>
    <string name="logout">LogOut</string>
    <string name="default_token">14797687985-j52bpkdujebgl02anpobmca2tco4cmgr.apps.googleusercontent.com</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="you_can_leave_comment_for_done_task">You can leave comment for done task</string>
    <string name="success_button">Success</string>
    <string name="fail_button">Fail</string>
    <string name="please_confirm_the_password">Please confirm the password</string>
    <string name="go">Go</string>
    <string name="back">Back</string>
    <string name="no_details">No details</string>
    <string name="today">Today</string>
    <string name="daily">Daily</string>
    <string name="was_entered_less_date_then_now">Was entered less date then now</string>
    <string name="on_the_next_week">On the next week</string>
    <string name="you_cant_be_a_guest">You can\'t be a guest, sign in pls</string>
    <string name="to">to</string>
    <string name="update">Update</string>
</resources>
